スポンサー追加

--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -171,6 +171,8 @@
 				</li>
 				<% })%>
 			</ul>
+			<br><br>
+			<p style="text-align: right"><a href="/speaker.html" target="_blank">セッション情報一覧はこちら</a></p>
 			<!-- /.list-speaker -->
 		</div><!-- /.inner -->
 	</section><!-- /#speaker -->
@@ -210,6 +212,8 @@
 				<li><a href="<%=sponsor.link %>" target="_blank"><img width="80%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
 				<% })%>
 			</ul><!-- /.sponsor-list -->
+			<br><br><br><br>
+			<p>スポンサー掲載ご希望の方は <a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">こちら</a>よりお申し込みください。</p>
 
 		</div><!-- /.inner -->
 	</section><!-- /#sponsor -->
