--- a/src/css/style.css
+++ b/src/css/style.css
@@ -590,13 +590,15 @@ sponsor
 
 #sponsor .sponsor-list {
 	overflow: hidden;
-	margin-left: -10px;
+	/*margin-left: -10px;*/
+	text-align: center;
 }
 #sponsor .sponsor-list li {
-	width: 320px;
-	float: left;
-	margin-top: 20px;
-	margin-left: 10px;
+	width: 310px;
+	height: 120px;
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 
