リンクのミス

--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -172,7 +172,7 @@
 				<% })%>
 			</ul>
 			<br><br>
-			<p style="text-align: right"><a href="/speaker.html" target="_blank">セッション情報一覧はこちら</a></p>
+			<p style="text-align: right"><a href="speaker.html" target="_blank">セッション情報一覧はこちら</a></p>
 			<!-- /.list-speaker -->
 		</div><!-- /.inner -->
 	</section><!-- /#speaker -->
