--- a/sass/_handson.scss
+++ b/sass/_handson.scss
@@ -12,8 +12,9 @@ section {
 }
 
 #handson-howto {
-	padding: 40px;
+	padding: 50px 0;
 	background-color: #eee;
+	background-image: url(../images/handson/handson.jpg)
 	background-size: cover;
 }
 
@@ -30,20 +31,24 @@ section {
 	font-size: 2em;
 	margin-bottom: 30px;
 }
+.handson-howto p {
+	margin-bottom: 1.5em;
+}
 
 #handson-lists {
-	padding: 40px;
+	padding: 40px 0;
 	background: #d3efff;
 }
 
 h1.edge {
-	font-size: 2em;
+	font-size: 1.7em;
+	font-weight: 100;
 }
 .edge {
 	position: relative;
 	display: inline-block;
 	margin-bottom: 45px;
-	padding: 20px 20px;
+	padding: 20px 40px;
 	width: auto;
 	height: auto;
 	color: #4d4d4d;
@@ -85,15 +90,20 @@ span.tag {
 	font-size: 0.7em;
 	font-weight: bold;
 	color: #fff;
-	background: #f48660;
+	background: #fc9b79;
 }
 
 .handson-lists ul li a {
-	font-size: 1.5em;
+	font-size: 1.3em;
 	font-weight: bold;
+	line-height: 1.5em;
 	text-decoration: none;
 	margin-right: 8px;
 	color: #414141;
+	
+	&:hover {
+		color: #4499CE;
+	}
 }
 
 #handson {
@@ -104,13 +114,14 @@ span.tag {
 .handson-list {
 	width: 100%;
 	margin-bottom: 40px;
-	padding: 20px 40px 45px;
+	padding: 40px 8% 70px;
 	background: #fff;
 	box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .handson-list .heading {
-	margin-bottom: 30px;
+	padding-bottom: 30px;
+	margin-bottom: 10px;
 }
 
 .handson-list h1 {
@@ -124,14 +135,30 @@ span.tag {
 
 .handson-list .detail {
 	margin: 0 auto;
-	border-top: 1px dotted #333;
+	border-top: 1px dotted #ccc;
 	padding-top: 30px;
 }
 
-.handson-list .detail dl dt {
+.handson-list .detail dl {
+	
+	dt {
+	margin-bottom: 10px;
 	padding: 2px 4px;
 	background: #d9efff;
+	}
+	
+	dd.name {
+		font-size: 1.1em;
+		font-weight: bold;
+	}
+	
+	dd.time {
+		color: #888;
+	}
+	
+	
 }
+
 
 .handson-list .prof-img {
 	margin-top: 20px;
@@ -139,24 +166,32 @@ span.tag {
 }
 
 .btn-join {
-	width: 100%;
+	a {
+	display: block;
+	width: auto;
 	height: auto;
-	margin: 20px auto 0;
+	margin: 60px 30px 0;
 	padding: 20px;
 	text-align: center;
 	border-radius: 5px;
-	background: #ccc;
-}
-
-.btn-join a {
-	display: block;
-	width: 100%;
-	height: auto;
+	background: #fc9773;
+	font-size: 1.2em;
+	font-weight: bold;
 	color: #fff;
+	
+	&:hover {
+		text-decoration: none;
+		background: #ff7545;
+	}
+	
+	transition: all 0.2s;
+		
+	}
+	
 }
 
 .handson-info {
-	padding: 30px;
+	padding: 40px 20px 20px;
 }
 .handson-info dl {
 	margin-bottom: 30px;
@@ -165,18 +200,56 @@ span.tag {
 	margin-bottom: 10px;
 }
 
-.join .btn {
-	display: block;
-	margin:  0 auto;
-	margin-bottom: 10px;
-	border-radius: 4px;
-	padding: 20px;
-	width: auto;
+.join {
 	text-align: center;
-	background: #e56d43;
-}
-.join .btn a {
+	
+	.btn a {
+	display: block;
+	width: auto;
+	height: auto;
+	margin:  0 auto 10px;
+	border-radius: 4px;
+	border: 3px solid #23a8fc;
+	padding: 15px 30px;
+	text-align: center;
 	font-size: 1.4em;
 	font-weight: bold;
+	color: #23a8fc;
+	
+	&:hover {
+		text-decoration: none;
+		color: #218bd3;
+		border: 3px solid #218bd3;
+	}
+	
+	transition: all 0.2s;
+}
+	
+	.btn-join {
+	a {
+	display: block;
+	width: auto;
+	height: auto;
+	margin: 60px 30px 30px;
+	padding: 30px;
+	text-align: center;
+	border-radius: 5px;
+	background: #23a8fc;
+	font-size: 1.5em;
+	font-weight: bold;
+	line-height: 1.5em;
 	color: #fff;
+	
+	&:hover {
+		text-decoration: none;
+		background: #218bd3;
+	}
+	
+	transition: all 0.2s;
+		
+	}
+	
+}
+	
+	
 }
