--- a/css/common.css
+++ b/css/common.css
@@ -5148,14 +5148,20 @@
   .handsonArea #handson-howto {
     padding: 50px 0;
     background-color: #eee;
-    background-size: cover; }
+    background-image: url(../images/handson/handson.jpg);
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: 100% auto; }
   .handsonArea .handson-howto {
-    margin: 0 auto;
+    margin: 0 auto 50px;
     padding: 20px 40px 30px;
     width: 85%;
     height: auto;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
-    background: #fff; }
+    background: #fff;
+    position: relative;
+    opacity: 0.9;
+    top: 50px; }
   .handsonArea .handson-howto h1 {
     font-size: 2em;
     margin-bottom: 30px; }
@@ -5219,7 +5225,7 @@
       color: #4499CE; }
   .handsonArea #handson {
     padding-top: 30px;
-    background: #63c3ff; }
+    background: #94d6ff; }
   .handsonArea .handson-list {
     width: 100%;
     margin-bottom: 40px;
