文言修正等

--- a/ejs/handson.ejs
+++ b/ejs/handson.ejs
@@ -102,20 +102,23 @@
 					<dt>受付について</dt>
 					<dd>受付は当日会場内にて実施させていただきます。</dd>
 					<dd>会場内での説明や資料をベースに、各自で作業を進めて頂き、不明な点を質問形式でサポートする形のブースイベントとなっております。</dd>
-					<dd>各受講者に決められた形のメンターが付いてサポートするタイプのイベントではない点ご了承ください。</dd>
+					<dd>各受講者に決められた形のメンターが付いてサポートするタイプのイベントではない点、予めご了承ください。</dd>
 				</dl>
 				<dl>
 					<dt>諸注意</dt>
 					<dd>当日は各自PCをご持参ください(PCのレンタルは行っておりません)。</dd>
 					<dd>メンタースタッフと参加人数のバランスでは、質問対応にお時間を頂くケースがあります。</dd>
-					<dd>ネットワークの状態や持ち込み機器の状態で、作業の進行が出来ない場合がございます。</dd>
+					<dd>座席には限りがありますので、当日の来場状況によっては参加にお時間を頂くケースや参加出来ないケースがございます。</dd>
+					<dd>会場ネットワークやネットワークの状態や参加者の持ち込み機器の状態によっては、作業の進行が出来ない場合がございます。</dd>
 				</dl>
 				<!--<p>その他ご不明な点がありましたら<a href="">こちら</a>からお問い合わせください。</p>-->
 		</div>
 		<div class="join">
 			<p>現在優先案内枠付のスポンサーチケット発売中!!</p>
 			<!--<div class="btn-join"><a href="">FRONTEND CONFERENCE 2016 に参加する！</a></div>-->
-			<div class="btn"><a href="">個人/企業スポンサーのお申し込みはこちら</a></div>
+			<div class="btn"><a href="http://the-frontend-conference-2016.peatix.com" target="_blank">個人/企業スポンサーのお申し込みはこちら</a></div>
+
+			<p>一般参加受付は後日、参加登録開始予定!!</p>
 		</div>
 		</div>
 	</section>
