画像反映、一部ハンズオン修正

--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -54,6 +54,15 @@
     }
 });
 </script>
+	<style>
+		.kfugBtn{
+			margin: 2em 0;
+			border: 3px solid #23a8fc;
+			border-radius: 2px;
+			padding: .5em 1em;
+
+		}
+	</style>
 </head>
 <body>
 <%- include('_header', {top:true}); %>
@@ -88,7 +97,13 @@
 				JSフレームワークやSASS,デザイン設計など 気になるセッション一覧は
 				<a style="color:#00C0FF;" href="./speaker.html">こちらをチェック!!</a>
 			</p>
+			<br>
+			<br>
+
+			<p class="kfugBtn">参加チケットの一般申込は近日公開!! <br>優先案内付きの個人/法人スポンサーチケットは <a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">こちら</a>からお申し込みください!!	</p>
 		</div><!-- /.inner -->
+
+
 	</section><!-- /#about -->
 
 
