サイト更新

--- a/ejs/handson.ejs
+++ b/ejs/handson.ejs
@@ -101,6 +101,7 @@
 				<dl>
 					<dt>受付について</dt>
 					<dd>受付は当日会場内にて実施させていただきます。</dd>
+					<dd>当日は受付の混雑が予想されますので、確実な参加をご希望の方は <a href="http://the-frontend-conference-2016.peatix.com">スポンサーチケット</a>のご購入をオススメします</dd>
 					<dd>会場内での説明や資料をベースに、各自で作業を進めて頂き、不明な点を質問形式でサポートする形のブースイベントとなっております。</dd>
 					<dd>各受講者に決められた形のメンターが付いてサポートするタイプのイベントではない点、予めご了承ください。</dd>
 				</dl>
@@ -114,11 +115,7 @@
 				<!--<p>その他ご不明な点がありましたら<a href="">こちら</a>からお問い合わせください。</p>-->
 		</div>
 		<div class="join">
-			<p>現在優先案内枠付のスポンサーチケット発売中!!</p>
-			<!--<div class="btn-join"><a href="">FRONTEND CONFERENCE 2016 に参加する！</a></div>-->
-			<div class="btn"><a href="http://the-frontend-conference-2016.peatix.com" target="_blank">個人/企業スポンサーのお申し込みはこちら</a></div>
-
-			<p>一般参加受付は後日、参加登録開始予定!!</p>
+			<div class="btn"><a href="http://ptix.co/1RHIQDV" target="_blank">一般参加申込はこちら!!</a></div>
 		</div>
 		</div>
 	</section>
