--- a/ejs/_header.ejs
+++ b/ejs/_header.ejs
@@ -1,7 +1,7 @@
 <%var url = (top)?"":"./";%>
 
 <div id="floating">
-    <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
+    <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">ハンズオン優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
 </div><!-- /#floating -->
 <header id="top-head">
     <div class="inner">
