--- a/sass/_handson.scss
+++ b/sass/_handson.scss
@@ -172,8 +172,8 @@ span.tag {
 .btn-join {
 	a {
 	display: block;
-	width: auto;
-	height: auto;
+	//width: auto;
+	//height: auto;
 	margin: 60px 30px 0;
 	padding: 20px;
 	text-align: center;
@@ -209,8 +209,8 @@ span.tag {
 	
 	.btn a {
 	display: block;
-	width: auto;
-	height: auto;
+	//width: auto;
+	//height: auto;
 	margin:  0 auto 10px;
 	border-radius: 4px;
 	border: 3px solid #23a8fc;
@@ -232,8 +232,8 @@ span.tag {
 	.btn-join {
 	a {
 	display: block;
-	width: auto;
-	height: auto;
+	//width: auto;
+	//height: auto;
 	margin: 60px 30px 30px;
 	padding: 30px;
 	text-align: center;
