--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,5 +1,3 @@
- 
-
 .handsonArea{
 	@import "handson";
 }
@@ -8,3 +6,29 @@
 #footer{
   @import "footer";
 }
+
+#sponsor{
+    @import "sponsor";
+}
+
+#staff{
+    @import "staff";
+}
+
+
+//#sponsor{
+//    .sponsor-list{
+//        li{
+//            display: inline-block;
+//        }
+//    }
+//}
+
+//#staff{
+//    .staff-list{
+//        margin: 10px auto;
+//            span{
+//                font-size: 12px;
+//            }
+//    }
+//}
