--- a/sass/_staff.scss
+++ b/sass/_staff.scss
@@ -2,7 +2,17 @@
 
 .staff-list{
     margin: 10px auto;
+    li{
+        display: inline-block;
+        height: 8em;
+        overflow: hidden;
+        margin-left: 1em;
+        margin-right:1em;
+    }
     span{
+        margin-top:.5em;
         font-size: 12px;
+        display: inline-block;
+        height: 2em;
     }
 }
