ボタンにロールオーバーとアニメーションをつけました。

--- a/ejs/handson.ejs
+++ b/ejs/handson.ejs
@@ -97,7 +97,7 @@
 	
 	<section id="handson-info">
 		<div class="inner">
-		<div class="handson-info">
+			<div class="handson-info">
 				<dl>
 					<dt>受付について</dt>
 					<dd>受付は当日会場内にて実施させていただきます。</dd>
@@ -113,10 +113,8 @@
 					<dd>会場ネットワークやネットワークの状態や参加者の持ち込み機器の状態によっては、作業の進行が出来ない場合がございます。</dd>
 				</dl>
 				<!--<p>その他ご不明な点がありましたら<a href="">こちら</a>からお問い合わせください。</p>-->
-		</div>
-		<div class="join">
-			<div class="btn"><a href="http://ptix.co/1RHIQDV" target="_blank">一般参加申込はこちら!!</a></div>
-		</div>
+			</div>
+			<a href="http://ptix.co/1RHIQDV" target="_blank" class="kfugBtn hvr-back-pulse">一般参加申込はこちら!!</a>
 		</div>
 	</section>
 	
