--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -54,20 +54,6 @@
     }
 });
 </script>
-	<style>
-		.kfugBtn{
-			display: block;
-			margin: 2em 1em;
-			border: 3px solid #23a8fc;
-			border-radius: 5px;
-			padding: .8em 2em;
-			color: #23a8fc;
-			font-size: 1.2em;
-			font-weight:bold;
-			text-align: center;
-			text-decoration: none;
-		}
-	</style>
 </head>
 <body>
 <%- include('_header', {top:true}); %>
@@ -98,7 +84,7 @@
 			<p>デザイナーもエンジニアもWebで働く全ての人のために。<br>関西最大級のフロントエンドイベントが今始まります!!</p>
 			<br>
 
-			<a href="http://ptix.co/1RHIQDV" target="_blank" class="kfugBtn">
+			<a href="http://ptix.co/1RHIQDV" target="_blank" class="kfugBtn hvr-back-pulse">
 				参加申込はこちら!!
 			</a>
 			<p>
@@ -121,12 +107,12 @@
 				にて最新情報のチェックをお願いします。
 			</p>
 
-			<a href="./speaker.html" class="kfugBtn">
+			<a href="./speaker.html" class="kfugBtn hvr-back-pulse ">
 				Angular2やSassなど <br>
 				気になるセッション一覧はこちら
 			</a>
 
-			<a href="handson.html" class="kfugBtn">
+			<a href="handson.html" class="kfugBtn hvr-back-pulse">
 				ハンズオン企画はこちら
 			</a>
 
@@ -260,11 +246,11 @@
 			</ul><!-- /.sponsor-list -->
             </div>
 			<br><br>
-			<a href="http://the-frontend-conference-2016.peatix.com/" class="kfugBtn">
+			<a href="http://the-frontend-conference-2016.peatix.com/" class="kfugBtn hvr-back-pulse">
 				スポンサー掲載ご希望の方はこちらよりお申し込みください
 			</a>
-
 		</div><!-- /.inner -->
+
 	</section><!-- /#sponsor -->
 
 	<section id="staff" class="cont">
