--- a/sass/_handson.scss
+++ b/sass/_handson.scss
@@ -169,31 +169,6 @@ span.tag {
 	border-radius: 50%;
 }
 
-.btn-join {
-	a {
-	display: block;
-	//width: auto;
-	//height: auto;
-	margin: 60px 30px 0;
-	padding: 20px;
-	text-align: center;
-	border-radius: 5px;
-	background: #fc9773;
-	font-size: 1.2em;
-	font-weight: bold;
-	color: #fff;
-	
-	&:hover {
-		text-decoration: none;
-		background: #ff7545;
-	}
-	
-	transition: all 0.2s;
-		
-	}
-	
-}
-
 .handson-info {
 	padding: 40px 20px 20px;
 }
@@ -206,54 +181,6 @@ span.tag {
 
 .join {
 	text-align: center;
-	
-	.btn a {
-	display: block;
-	//width: auto;
-	//height: auto;
-	margin:  0 auto 10px;
-	border-radius: 4px;
-	border: 3px solid #23a8fc;
-	padding: 15px 30px;
-	text-align: center;
-	font-size: 1.4em;
-	font-weight: bold;
-	color: #23a8fc;
-	
-	&:hover {
-		text-decoration: none;
-		color: #218bd3;
-		border: 3px solid #218bd3;
-	}
-	
-	transition: all 0.2s;
 }
-	
-	.btn-join {
-	a {
-	display: block;
-	//width: auto;
-	//height: auto;
-	margin: 60px 30px 30px;
-	padding: 30px;
-	text-align: center;
-	border-radius: 5px;
-	background: #23a8fc;
-	font-size: 1.5em;
-	font-weight: bold;
-	line-height: 1.5em;
-	color: #fff;
-	
-	&:hover {
-		text-decoration: none;
-		background: #218bd3;
-	}
-	
-	transition: all 0.2s;
-		
-	}
-	
-}
-	
-	
-}
+
+@include kfugBtn();
