--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,28 @@
 @charset "UTF-8";
+a {
+  background-color: transparent; }
+
+a:active,
+a:hover {
+  outline: 0; }
+
+.kfugBtn {
+  display: block;
+  margin: 2em 1em;
+  border: 3px solid #23a8fc;
+  border-radius: 5px;
+  padding: .8em 2em;
+  color: #23a8fc;
+  text-decoration: none;
+  font-size: 1.2em;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none; }
+  .kfugBtn:hover, .kfugBtn:active {
+    background-color: #23a8fc;
+    color: #fff;
+    text-decoration: none; }
+
 .handsonArea {
   /*!
  * Bootstrap v3.3.6 (http://getbootstrap.com)
@@ -5544,20 +5568,6 @@
   .handsonArea .handson-list .prof-img {
     margin-top: 20px;
     border-radius: 50%; }
-  .handsonArea .btn-join a {
-    display: block;
-    margin: 60px 30px 0;
-    padding: 20px;
-    text-align: center;
-    border-radius: 5px;
-    background: #fc9773;
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #fff;
-    transition: all 0.2s; }
-    .handsonArea .btn-join a:hover {
-      text-decoration: none;
-      background: #ff7545; }
   .handsonArea .handson-info {
     padding: 40px 20px 20px; }
   .handsonArea .handson-info dl {
@@ -5566,36 +5576,22 @@
     margin-bottom: 10px; }
   .handsonArea .join {
     text-align: center; }
-    .handsonArea .join .btn a {
-      display: block;
-      margin: 0 auto 10px;
-      border-radius: 4px;
-      border: 3px solid #23a8fc;
-      padding: 15px 30px;
-      text-align: center;
-      font-size: 1.4em;
-      font-weight: bold;
-      color: #23a8fc;
-      transition: all 0.2s; }
-      .handsonArea .join .btn a:hover {
-        text-decoration: none;
-        color: #218bd3;
-        border: 3px solid #218bd3; }
-    .handsonArea .join .btn-join a {
-      display: block;
-      margin: 60px 30px 30px;
-      padding: 30px;
-      text-align: center;
-      border-radius: 5px;
-      background: #23a8fc;
-      font-size: 1.5em;
-      font-weight: bold;
-      line-height: 1.5em;
+  .handsonArea .kfugBtn {
+    display: block;
+    margin: 2em 1em;
+    border: 3px solid #23a8fc;
+    border-radius: 5px;
+    padding: .8em 2em;
+    color: #23a8fc;
+    text-decoration: none;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none; }
+    .handsonArea .kfugBtn:hover, .handsonArea .kfugBtn:active {
+      background-color: #23a8fc;
       color: #fff;
-      transition: all 0.2s; }
-      .handsonArea .join .btn-join a:hover {
-        text-decoration: none;
-        background: #218bd3; }
+      text-decoration: none; }
 
 #footer {
   /*!
@@ -16034,6 +16030,22 @@
     margin-top: 20px;
     display: table-cell;
     vertical-align: middle; }
+  #sponsor .kfugBtn {
+    display: block;
+    margin: 2em 1em;
+    border: 3px solid #23a8fc;
+    border-radius: 5px;
+    padding: .8em 2em;
+    color: #23a8fc;
+    text-decoration: none;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none; }
+    #sponsor .kfugBtn:hover, #sponsor .kfugBtn:active {
+      background-color: #23a8fc;
+      color: #fff;
+      text-decoration: none; }
 
 #staff {
   /*!
