--- a/sass/_handson.scss
+++ b/sass/_handson.scss
@@ -8,7 +8,7 @@ section {
 .handson-img {
 	width: 100%;
 	height: 100%;
-	
+
 }
 
 #handson-howto {
@@ -26,7 +26,7 @@ section {
 	width: 85%;
 	height: auto;
 	box-shadow: 0 2px 1px rgba(0, 0, 0, 0.3);
-	background: #fff;	
+	background: #fff;
 	position: relative;
 	opacity: 0.9;
 	top: 50px;
@@ -104,7 +104,7 @@ span.tag {
 	text-decoration: none;
 	margin-right: 8px;
 	color: #414141;
-	
+
 	&:hover {
 		color: #4499CE;
 	}
@@ -144,29 +144,48 @@ span.tag {
 }
 
 .handson-list .detail dl {
-	
+
 	dt {
 	margin-bottom: 10px;
 	padding: 2px 4px;
 	background: #d9efff;
 	}
-	
+
 	dd.name {
 		font-size: 1.1em;
 		font-weight: bold;
 	}
-	
+
 	dd.time {
 		color: #888;
 	}
-	
-	
+
+
 }
 
 
 .handson-list .prof-img {
 	margin-top: 20px;
 	border-radius: 50%;
+}
+
+.btn-join {
+	a {
+		display: block;
+		margin: 30px 30px 0;
+		padding: 20px;
+		text-align: center;
+		border-radius: 5px;
+		background: #fc9773;
+		font-size: 1.2em;
+		font-weight: bold;
+		color: #fff;
+		transition: all 0.2s;
+		&:hover {
+			text-decoration: none;
+			background: #ff7545;
+		}
+	}
 }
 
 .handson-info {
