--- a/ejs/_head.ejs
+++ b/ejs/_head.ejs
@@ -20,3 +20,4 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="js/navigation.js"></script>
