スピーカ、スポンサー追加

--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -97,7 +97,7 @@
 
 			<br><br><br>
 			<h3>Webではたらく全ての人のために</h3>
-			<p>FRONEND CONFERENCE 2016の魅力は、なんといってもそのコンテンツの幅広さにあります。</p>
+			<p>FRONTEND CONFERENCE 2016の魅力は、なんといってもそのコンテンツの幅広さにあります。</p>
 			<p>デザイナー向け、エンジニア向け合わせて10以上のセッショントラックに加え、<br>もくもく会ブースやハンズオンブースなど初めての方でも気軽に楽しめる企画が盛り沢山!!</p>
 			<p>
 				コンテンツの詳細は随時公開していきますので、是非
@@ -175,6 +175,9 @@
 					<p>JR大阪駅 より 徒歩 10分</p>
 					<p>JR大阪駅よりシャトルバスも運行</p>
 					<p>詳しくは<a href="http://www.temmacenter.com/shin_umeda/access/index.html#access01">公式HP</a>をチェック!!</p>
+
+					<br><br>
+					<p>会場周辺の <a href="https://www.google.com/maps/d/edit?mid=zaBnRQARfV0M.kQqnvV-PSshI&usp=sharing">ランチマップ</a>はこちら!!</p>
 				</div>
 			</div><!-- /.mapbox -->
 		</div><!-- /.inner -->
